# unpdf

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  amnesty-example-2.json  api.py  convert.py  json-viewer.html  pyproject.toml  requirements.txt  unpdf.py
recipes/: __init__.py  amnesty.py  base.py  default.py  frc.py  registry.py
